<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>neo_usboard_v2</name>
  <version>1.0.0</version>
  <description>ROS Node for the new USBoardV2 (USS5)</description>

  <maintainer email="ros@neobotix.de">Neobotix</maintainer>
  <license>BSD</license>
  <url type="website">https://www.neobotix-roboter.de/</url>
  <author>Max Wittal</author>
  <author>Pradheep Padmanabhan</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclcpp_action</exec_depend>
  <exec_depend>rclcpp_lifecycle</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>neo_msgs2</exec_depend>
  <exec_depend>neo_srvs2</exec_depend>
  <exec_depend>neo_common2</exec_depend>

  <export>
   <build_type>ament_cmake</build_type>
  </export>
</package>
